# DocRAG-Observe

./: .gitignore  README.md  dashboard.py  demo.py  evaluate.py  pyproject.toml
config/: settings.py
core/: embedding.py  evaluation.py  generation.py  langsmith_tracing.py  monitoring.py  rag_pipeline.py  reranker.py  vector_store.py
utils/: chunker.py  constants.py  pdf_parser.py  pii_sanitizer.py  text_cleaner.py
