[project]
name = "docrag-observe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=5.0.0",
    "docling>=2.102.2",
    "langchain>=1.3.9",
    "langchain-text-splitters>=1.1.2",
    "langsmith>=0.8.16",
    "ollama>=0.6.2",
    "pinecone>=9.1.0",
    "presidio-analyzer>=2.2.362",
    "presidio-anonymizer>=2.2.362",
    "pytest>=9.1.0",
    "python-dotenv>=1.2.2",
    "ragas>=0.4.3",
    "requests>=2.34.2",
    "sentence-transformers>=5.5.1",
    "tiktoken>=0.13.0",
    "torch>=2.12.0",
    "tqdm>=4.68.2",
    "transformers>=5.8.1",
]
